--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-opencv-python
-scikit-learn
+opencv-python~=4.10.0.82
+scikit-learn~=1.2.2
 pycaret
-pandas
-tqdm
-scikit-image
-keras
+pandas~=2.1.4
+tqdm~=4.66.4
+scikit-image~=0.22.0
+keras~=3.0.5
 tensorflow
 git+https://github.com/MasterTrtle/imgaug.git
 seaborn
+numpy~=1.26.4
+pillow~=10.2.0
+scipy~=1.11.4
+matplotlib~=3.8.0
+joblib~=1.2.0
